changed engage NY on project overview to core knowledge for lower and expeditionary learning for upper

--- a/app/views/admin/projects/_form.html.erb
+++ b/app/views/admin/projects/_form.html.erb
@@ -178,7 +178,7 @@
   </div>
 
   <div class="field">
-    <%= f.label :engage_ny %>
+    <%= f.label "Core Knowledge / Expeditionary Learning" %>
     <%= f.text_field :engage_ny %>
   </div>
 
