--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,4 +1,4 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<h2>Epit <%= resource_name.to_s.humanize %></h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
@@ -7,6 +7,58 @@
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true %>
   </div>
+
+  <%= f.fields_for :profiles, html: { multipart: true } do |fp| %>
+    <div>
+      <%= fp.label "Pic of You" %><br />
+      <%= fp.file_field :instructor_image %>
+    </div>
+
+    <div class="field">
+      <%= fp.label :title %><br />
+      <%= fp.text_field :title, autofocus: true %>
+    </div>
+
+    <div class="field">
+      <%= fp.label :first_name %><br />
+      <%= fp.text_field :first_name %>
+    </div>
+
+    <div class="field">
+      <%= fp.label :last_name %><br />
+      <%= fp.text_field :last_name %>
+    </div>
+
+    <div class="field">
+      <%= fp.label :school %><br />
+      <%= fp.text_field :school %>
+    </div>
+
+    <div class="field">
+      <%= fp.label :city %><br />
+      <%= fp.text_field :city %>
+    </div>
+
+    <div class="field">
+        <%= fp.label :state %>
+        <%= fp.select :state, Profile::STATES %>
+    </div>
+
+    <div class="field">
+      <%= fp.label :country %><br />
+      <%= fp.text_field :country %>
+    </div>
+
+    <div class="field">
+      <%= fp.label :occupation %><br />
+      <%= fp.text_field :occupation %>
+    </div>
+
+    <div class="field">
+      <%= fp.label :grades %><br />
+      <%= fp.text_field :grades %>
+    </div>
+  <% end %>
 
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
