--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,39 +1,111 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<h2>Epit <%= resource_name.to_s.humanize %></h2>
+
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
+
 
   <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true %>
   </div>
 
+
+  <%= f.fields_for :profiles, html: { multipart: true } do |fp| %>
+    <div>
+      <%= fp.label "Pic of You" %><br />
+      <%= fp.file_field :instructor_image %>
+    </div>
+
+
+    <div class="field">
+      <%= fp.label :title %><br />
+      <%= fp.text_field :title, autofocus: true %>
+    </div>
+
+
+    <div class="field">
+      <%= fp.label :first_name %><br />
+      <%= fp.text_field :first_name %>
+    </div>
+
+
+    <div class="field">
+      <%= fp.label :last_name %><br />
+      <%= fp.text_field :last_name %>
+    </div>
+
+
+    <div class="field">
+      <%= fp.label :school %><br />
+      <%= fp.text_field :school %>
+    </div>
+
+
+    <div class="field">
+      <%= fp.label :city %><br />
+      <%= fp.text_field :city %>
+    </div>
+
+
+    <div class="field">
+        <%= fp.label :state %>
+        <%= fp.select :state, Profile::STATES %>
+    </div>
+
+
+    <div class="field">
+      <%= fp.label :country %><br />
+      <%= fp.text_field :country %>
+    </div>
+
+
+    <div class="field">
+      <%= fp.label :occupation %><br />
+      <%= fp.text_field :occupation %>
+    </div>
+
+
+    <div class="field">
+      <%= fp.label :grades %><br />
+      <%= fp.text_field :grades %>
+    </div>
+  <% end %>
+
+
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
+
 
   <div class="field">
     <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
     <%= f.password_field :password, autocomplete: "off" %>
   </div>
 
+
   <div class="field">
     <%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
+
 
   <div class="field">
     <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
     <%= f.password_field :current_password, autocomplete: "off" %>
   </div>
 
+
   <div class="actions">
     <%= f.submit "Update" %>
   </div>
 <% end %>
 
+
 <h3>Cancel my account</h3>
 
+
 <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+
 
 <%= link_to "Back", :back %>
