--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -4,8 +4,67 @@
   <%= f.select :role do %>
     <%= options_for_select(User.roles.map { |role, _| [role.capitalize, role] }) %>
   <% end %>
+  <%= f.fields_for :profiles, html: { multipart: true } do |fp| %>
+    <div>
+      <%= fp.label "Pic of You" %><br />
+      <%= fp.file_field :instructor_image %>
+    </div>
+
+
+    <div class="field">
+      <%= fp.label :title %><br />
+      <%= fp.text_field :title, autofocus: true %>
+    </div>
+
+
+    <div class="field">
+      <%= fp.label :first_name %><br />
+      <%= fp.text_field :first_name %>
+    </div>
+
+
+    <div class="field">
+      <%= fp.label :last_name %><br />
+      <%= fp.text_field :last_name %>
+    </div>
+
+
+    <div class="field">
+      <%= fp.label :school %><br />
+      <%= fp.text_field :school %>
+    </div>
+
+
+    <div class="field">
+      <%= fp.label :city %><br />
+      <%= fp.text_field :city %>
+    </div>
+
+
+    <div class="field">
+        <%= fp.label :state %>
+        <%= fp.select :state, Profile::STATES %>
+    </div>
+
+
+    <div class="field">
+      <%= fp.label :country %><br />
+      <%= fp.text_field :country %>
+    </div>
+
+
+    <div class="field">
+      <%= fp.label :occupation %><br />
+      <%= fp.text_field :occupation %>
+    </div>
+
+
+    <div class="field">
+      <%= fp.label :grades %><br />
+      <%= fp.text_field :grades %>
+    </div>
+  <% end %>
   <%= render "shared/form_submit", form: f, title: "Update User" %>
 <% end %>
 
 <%= render "shared/destroy_button", entity: @user %>
-
