--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -9,7 +9,7 @@
   <%= f.fields_for :profile, html: { multipart: true } do |fp| %>
     <div>
       <%= fp.label "Pic of You" %><br />
-      <%= fp.file_field :instructor_image %>
+      <%= fp.file_field :avatar %>
     </div>
 
     <div class="field">
