--- a/app/views/home/dashboard.html.erb
+++ b/app/views/home/dashboard.html.erb
@@ -3,8 +3,8 @@
 
 <div class="dashboard">
   <div class="teacher-image">
-    <% if current_user.profile.instructor_image.present? %>
-      <%= image_tag current_user.profile.instructor_image.url(:small), id: "person-icon" %>
+    <% if current_user.profile.avatar.present? %>
+      <%= image_tag current_user.profile.avatar.url(:small), id: "person-icon" %>
     <% else %>
       <%= image_tag("person-icon.png", size: "200x200", alt: "person icon", id: "person-icon") %>
     <% end %>
@@ -12,7 +12,7 @@
   </div>
 
     <%= fields_for current_user.profile, html: { multipart: true } do |f| %>
-      <%= f.file_field :instructor_image, class: 'filestyle',
+      <%= f.file_field :avatar, class: 'filestyle',
        :'data-classButton' => 'btn btn-primary',
        :'data-input' => 'false', classIcon:  'icon-plus',
        :'data-buttonText' => 'Your label here'  %>
@@ -25,28 +25,22 @@
     </h1>
 
     <div id="edit-name" hidden>
-      <%= form_for current_user do |f| %>
-        <%= f.fields_for current_user.profile do |fp| %>
-
-          <div class="field">
-            <%= fp.label :title %><br />
-            <%= fp.text_field :title %>
+      <%= form_for current_user, url: profile_path do |f| %>
+         <%= f.fields_for :profile do |p| %>
+          <div>
+            <%= p.label :title %>
+            <%= p.text_field :title %>
           </div>
-
-          <div class="field">
-            <%= fp.label :first_name %><br />
-            <%= fp.text_field :first_name %>
+          <div>
+            <%= p.label :first_name %>
+            <%= p.text_field :first_name %>
           </div>
-
-          <div class="field">
-            <%= fp.label :last_name %><br />
-            <%= fp.text_field :last_name %>
+          <div>
+            <%= p.label :last_name %>
+            <%= p.text_field :last_name %>
           </div>
-
-          <div class="actions">
-            <%= fp.submit "Save changes" %>
-          </div>
-        <% end %>
+         <% end %>
+         <%= f.submit %>
       <% end %>
     </div>
 
