added subscriber pop-up to project overview

--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -152,7 +152,7 @@
           <p>N/A</p>
         <% end %>
       <% end %>
-      
+
       <h2 id='project-next-gen-sci'>next generation science</h2>
       <% if @project.next_gen_sci.present? %>
         <p><%= @project.next_gen_sci %></p>
@@ -164,3 +164,4 @@
   </div>
 
 </div>
+<script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/signup-forms/popup/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script><script type="text/javascript">require(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us10.list-manage.com","uuid":"28ca6056cf1fcbb59340d2de6","lid":"434752e97b"}) })</script>
