styled input buttons & changed 'contact preferences' to 'email & password'

--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -81,7 +81,7 @@
     input {
       @include input-styles;
       border-radius: 25px;
-      color: white;
+      color: $warm-gray;
       width: 300px;
       padding: 10px 5px;
       padding-left: 10px;
