--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -102,13 +102,13 @@
 
       <div id="contact-preferences">
         <h4>
-          contact preferences
+          email & password
           <%= image_tag("pencil-icon.png", size: "20x20",alt: "pencil icon", class: "pencil-icon", id: "pencil-email") %>
         </h4>
         <div id="email-data">
-          <p>PLEASE NOTE THAT ALL MEMBERS WILL RECEIVE OUR NEWSLETTER</p>
+          <!-- <p>PLEASE NOTE THAT ALL MEMBERS WILL RECEIVE OUR NEWSLETTER</p> -->
           <p><%= current_user.email %></p>
-          <p><input type="checkbox" checked>Yes!  I want to be notified of new lessons on the website</p>
+          <!-- <p><input type="checkbox" checked>Yes!  I want to be notified of new lessons on the website</p> -->
         </div>
       </div>
 
