--- a/app/assets/stylesheets/sign_up.scss
+++ b/app/assets/stylesheets/sign_up.scss
@@ -1,14 +1,12 @@
 .sign-up {
-  // text-align: center;
-  padding: 80px 0 80px 0;
+  text-align: center;
+  padding: 120px 0 80px 0;
   margin-top: -40px;
   background-image: url("sign_up_background.jpg");
-
 
   h2, a {
     color: white;
   }
-
 
   .field {
     margin: 1.6em 0;
@@ -20,6 +18,7 @@
       @include input-styles;
       border-radius: 25px;
       text-align: center;
+      color: $warm-gray;
       width: 600px;
       padding: 10px;
       font-size: 1.5em;
@@ -27,15 +26,14 @@
     }
   }
 
-
   .actions {
     margin-bottom: 10px;
     .btn {
       background-color: $primary-green;
     }
-
-
   }
 
-
+  label {
+    color: white;
+  }
 }
