--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
 <body>
   <%= render "shared/hero" %>
   <%= render "shared/navigation" %>
-  <% if @homepage || @disable_shared%>
+  <% if @homepage || @disable_shared || @user_sign_up_in %>
   <%= yield %>
   <% else %>
   <div class="wrapper">
