--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -146,5 +146,8 @@
         <h4>view your curriculum & supply lists:</h4>
       </div>
     </div>
+    <div id="logout-button" class="btn">
+      <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
+    </div>
   </div>
 </div>
