--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -106,66 +106,39 @@
           <%= image_tag("pencil-icon.png", size: "20x20",alt: "pencil icon", class: "pencil-icon", id: "pencil-email") %>
         </h4>
         <div id="email-data">
-          <!-- <p>PLEASE NOTE THAT ALL MEMBERS WILL RECEIVE OUR NEWSLETTER</p> -->
           <p><%= current_user.email %></p>
-          <!-- <p><input type="checkbox" checked>Yes!  I want to be notified of new lessons on the website</p> -->
         </div>
       </div>
 
       <div id="edit-email" class="edit-user-data" hidden>
-
         <%= form_for current_user do |f| %>
+          <div class="field">
+            <%= f.label :email %><br />
+            <%= f.email_field :email, placeholder: current_user.email %>
+          </div>
 
-        <!-- Begin MailChimp Signup Form -->
-        <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
-        <style type="text/css">
-        #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
-        /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
-        We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-        </style>
-        <div id="mc_embed_signup">
-          <form action="//doodles-academy.us10.list-manage.com/subscribe/post?u=28ca6056cf1fcbb59340d2de6&id=434752e97b" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-          <div id="mc_embed_signup_scroll">
-            <div class="mc-field-group">
-              <label for="mce-EMAIL">Email Address</label>
-              <!-- <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL"> -->
-              <%= f.email_field :email, name: "EMAIL", placeholder: current_user.email, id: "mce-EMAIL" %>
-            </div>
-            <div>
-              <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-              <%= f.password_field :current_password, autocomplete: "off", id: "current-pw" %>
-            </div>
-        <div class="mc-field-group input-group">
-          <ul>
-            <li><input type="radio" value="16384" name="group[11229]" id="mce-group[11229]-11229-0" class="mc-checks" checked><label for="mce-group[11229]-11229-0">Yes, please notify me when new projects are loaded on the website</label></li>
-            <li><input type="radio" value="524288" name="group[11229]" id="mce-group[11229]-11229-1" class="mc-checks"><label for="mce-group[11229]-11229-1">No, thank you.</label></li>
-          </ul>
-        </div>
-          <div id="mce-responses" class="clear">
-            <div class="response" id="mce-error-response" style="display:none"></div>
-            <div class="response" id="mce-success-response" style="display:none"></div>
-          </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-            <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_28ca6056cf1fcbb59340d2de6_434752e97b" tabindex="-1" value=""></div>
-              <div class="clear">
-                <%= f.submit "Update", name: "subscribe", id: "mc-embedded-subscribe", class: "actions btn btn-blue" %>
-                <!-- <input type="submit" value="Update" name="subscribe" id="mc-embedded-subscribe" class="actions btn btn-blue"> -->
-              </div>
-            </div>
-        </form>
-        </div>
-        <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
-        <!--End mc_embed_signup-->
-
+          <div class="actions">
+            <%= f.submit "Update" %>
+          </div>
         <% end %>
+      </div>
 
+      <div id="change-password">
+        <h4>
+          change password
+          <%= image_tag("pencil-icon.png", size: "20x20",alt: "pencil icon", class: "pencil-icon", id: "pencil-password") %>
+        </h4>
+      </div>
+
+      <div id="edit-password" class="edit-user-data" hidden>
         <%= form_for current_user do |f| %>
 
-          <div>
+          <div class="field">
             <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
             <%= f.password_field :password, autocomplete: "off" %>
           </div>
 
-          <div>
+          <div class="field">
             <%= f.label :password_confirmation %><br />
             <%= f.password_field :password_confirmation, autocomplete: "off" %>
           </div>
