--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,6 +6,34 @@
 
   <section>
     <div class="homepage-content">
+      <h2>Doodles Academy is a powerful art curriculum for for grades 1-5.</h2>
+      <p>
+        Our program is designed to minimize teacher prep, and to prepare educators of all backgrounds to offer their students a high-quality art experience. Our lessons include:
+      </p>
+      <ul>
+        <li>Videos with demos</li>
+        <li>Downloadable Lesson Plans</li>
+        <li>Downloadable Supply Lists</li>
+        <li>Downloadable student handouts</li>
+        <li>Ideas for extending projects</li>
+        <li>Common Core & National Art Standards</li>
+        <li>Connections to open source curricula</li>
+        <li>Constantly expanding group of projects</li>
+        <li>Prompts for discussion</li>
+        <li>Suggestions for early finishers</li>
+        <li>Critical thinking skills in every lesson</li>
+        <li>"Knowledge building" topic based units</li>
+      </ul>
+    </div>
+  </section>
+
+  <section>
+     <div id="image_home_summary">
+     </div>
+   </section>
+
+  <section>
+    <div class="homepage-content">
       <h2>Students aren't carbon copies, why should their art be?</h2>
       <p>
         With Doodles Academy, educators of all backgrounds can offer their students a comprehensive, standards-aligned, open-ended curriculum with excellence and ease.
