changed text in home page section

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -36,7 +36,7 @@
     <div class="homepage-content">
       <h2>Students aren't carbon copies, why should their art be?</h2>
       <p>
-        With Doodles Academy, educators of all backgrounds can offer their students a comprehensive, standards-aligned, open-ended curriculum with excellence and ease.
+        Rather than offering step-by-step tutorials,  Doodles Academy empowers teachers of all backgrounds to celebrate their student’s individual experiences and choices through open-ended art projects. Our projects are rigorous without overwhelming. Skills are scaffolded and incorporated in ways that respect the unique artistic vision of each student.
       </p>
     </div>
   </section>
