added favorite icon

--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -22,7 +22,7 @@
 
   <hr />
 
-  <h1>Project Overview</h1>
+  <h1>Project Overview<span class="favorite glyphicon glyphicon-star-empty"  aria-hidden="true"></span></h1>
   <div>
     <h2 id='project-synopsis'>synopsis</h2>
     <p><%= @project.synopsis %></p>
