--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -23,6 +23,11 @@
   <hr />
 
   <h1>Project Overview<span class="favorite glyphicon glyphicon-star-empty"  aria-hidden="true"></span></h1>
+  <%= @project %>
+  <% if current_user %>
+    <%= link_to "favorite", favorite_project_path(@project, type: "favorite"), method: :put %>
+    <%= link_to "unfavorite", favorite_project_path(@project, type: "unfavorite"), method: :put %>
+  <% end %>
   <div>
     <h2 id='project-synopsis'>synopsis</h2>
     <p><%= @project.synopsis %></p>
