--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -160,6 +160,7 @@
       <div>
         <h4><span class="glyphicon glyphicon-star"  aria-hidden="true"></span>favorite projects</h4>
       </div>
+      <h1><%= current_user.favorites.first %></h1>
       <a href="/lower/projects/<%= ProjectSet.first.title.downcase %>">
       <%= image_tag(ProjectSet.first.project_image, size: "100x100") %>
       <div><%= ProjectSet.first.title %></div>
