--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -22,11 +22,14 @@
 
   <hr />
 
-  <h1>Project Overview<span class="favorite glyphicon glyphicon-star-empty"  aria-hidden="true"></span></h1>
-  <% if current_user %>
-    <%= link_to "favorite", favorite_project_path(@project, type: "favorite"), method: :put %>
-    <%= link_to "unfavorite", favorite_project_path(@project, type: "unfavorite"), method: :put %>
-  <% end %>
+  <h1>Project Overview</span>
+    <% if current_user %>
+      <% if @project.favorite_projects.present? %>
+        <%= link_to (content_tag(:span, "", class: "favorite glyphicon glyphicon-star")), favorite_project_path(@project, type: "unfavorite"), method: :put %>
+      <% else %>
+        <%= link_to (content_tag(:span, "", class: "favorite glyphicon glyphicon-star-empty")), favorite_project_path(@project, type: "favorite"), method: :put %>
+      <% end %>
+    <% end %></h1>
   <div>
     <h2 id='project-synopsis'>synopsis</h2>
     <p><%= @project.synopsis %></p>
